# Cortex

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOC-FASES.md  QWEN.md  README.md  SECURITY.md  WEBGRAPH-PLAN-EXPERTO-v2.md  config.yaml  conversacion.md  cortex-SDDwork.md.tmp  cortex-sync.md.tmp  opencode-tools-json.md  pi-session-2026-05-03T13-23-41-796Z_019dee02-4e61-7788-a1ab-d68ea1b668fa.html  pyproject.toml  requirements.txt  respuesta.md  step_8_log.txt
.claude/: settings.local.json
.codex-plugin/: plugin.json
.cortex/: AGENT.md  system-prompt.md
.cortex/skills/: cortex-SDDwork-cursor.md  cortex-SDDwork.md  cortex-sync.md
.cortex/subagents/: cortex-code-explorer.md  cortex-code-implementer.md  cortex-code-planner.md  cortex-code-reviewer.md  cortex-code-tester.md  cortex-documenter.md
.github/: copilot-instructions.md
.github/workflows/: ci-e2e.yml  ci-enterprise-governance.yml  ci-pull-request.yml  ci-release.yml  ci-security.yml
.qwen/: settings.json
cortex/: __init__.py  agent_guidelines.md  agent_guidelines_work.md  core.py  doc_generator.py  doc_validator.py  doc_verifier.py  doctor.py  documentation.py  feedback_loop.py  git_policy.py  handoff.py  ide_installer.py  mcp_server.py  memory_decay.py  models.py  pr_capture.py  profile_injector.py  runtime_context.py
cortex-pi/: AGENTS.md  README.md  justfile
cortex-pi/.pi/: damage-control-rules.yaml  mcp.json  settings.json  system.md
cortex-pi/extensions/: cortex-dashboard.ts  cortex-memory-widget.ts  cortex-spec-tracker.ts  cortex-subagent-widget.ts
cortex/autopilot/: __init__.py  budget_profiles.py  cli.py  config.py  context.py  context_budget.py  delegation.py  doctor.py  errors.py  lifecycle.py  mcp_tools.py  models.py  packaging.py  registry.py  reporting.py  service.py  session_builder.py  session_writer.py  state_store.py
cortex/cli/: __init__.py  _search_filters.py  _setup_helpers.py  docs_migrate.py  docs_search.py  docs_subcommand.py  docs_vectorization.py  main.py  review_knowledge.py
cortex/context_enricher/: __init__.py  async_enricher.py  co_occurrence.py  config.py  doc_intent.py  domain_detector.py  enricher.py  filters.py  observer.py  presenter.py  telemetry.py
cortex/documentation/: __init__.py  _legacy_shims.py  audit.py  backup.py  common.py  data.py  doc_type.py  errors.py  inventory.py  migration.py  routing.py  templates_engine.py  validation.py  writers.py
cortex/embedders/: __init__.py  base.py  factory.py  local.py  onnx.py  openai.py
cortex/enterprise/: __init__.py  config.py  governance.py  knowledge_promotion.py  maintenance.py  models.py  promotion_doctype.py  promotion_models.py  reporting.py  retrieval_service.py  sources.py
cortex/episodic/: __init__.py  embedder.py  memory_store.py  summarizer.py
cortex/hooks/: __init__.py  agent_hooks.py
cortex/ide/: __init__.py  base.py  canonical_tools.py  prompts.py  registry.py
cortex/mcp/: _subprocess.py  server.py
cortex/pipeline/: __init__.py  orchestrator.py
cortex/retrieval/: __init__.py  hybrid_search.py  intent.py
cortex/security/: __init__.py  paths.py
cortex/semantic/: __init__.py  chunker.py  markdown_parser.py  vault_reader.py  vector_cache.py
cortex/services/: __init__.py  pr_service.py  session_service.py  spec_service.py
cortex/setup/: __init__.py  cold_start.py  cortex_workspace.py  detector.py  enterprise_presets.py  enterprise_wizard.py  orchestrator.py  templates.py
cortex/skills/: __init__.py
cortex/tutor/: __init__.py  engine.py  hint.py
cortex/webgraph/: __init__.py  cache.py  cli.py  config.py  contracts.py  episodic_source.py  federation.py  graph_builder.py  openers.py  relation_builder.py  semantic_source.py  server.py  service.py  setup.py  style.py
cortex/workitems/: __init__.py  models.py  service.py
cortex/workspace/: __init__.py  layout.py
docs/BusinessSignal/: README.md  analisis_complejidad_businesssignal_vs_autopilot.md  architecture.md  data-model.md  detectors.md  product-surfaces.md  roadmap.md
docs/agents/: ANALISIS-COMPLETO.md  ANALISIS-MEJORA-TRIPARTITO.md  MEJORA-TRIPARTITO.md
docs/architecture/: canonical-tools.md  mcp-server-resilience.md
docs/autopilot/: README.md  contracts.md  evals.md  marketplace.md  testing-strategy.md
docs/canonical-documentation/: README.md  architecture.md  data-model.md  enterprise-extensions.md  frontmatter-schema.md  gap-analysis.md  metrics.md  migration-guide.md  retrieval-design.md  routing-table.md  templates-reference.md  testing-strategy.md  vectorization-design.md
docs/enterprise/: AVANCE-Alineacion-Fases-MultiProyecto-y-Gobernanza.md  AVANCE-EPIC-1-Enterprise-Foundation.md  AVANCE-EPIC-2-IMPLEMENTACION.md  AVANCE-EPIC-3-IMPLEMENTACION.md  AVANCE-EPIC-4-IMPLEMENTACION.md  AVANCE-EPIC-5-IMPLEMENTACION.md  AVANCE-EPIC-6-IMPLEMENTACION.md  (+11 more)
examples/: auth.py  basic_usage.py  langchain_integration.py
examples/python-fastapi/: README.md  main.py  pyproject.toml
examples/python-fastapi/src/: main.py
examples/python-fastapi/tests/: test_main.py
scripts/: benchmark_handoff_overhead.py  build_sandbox.py  devsecdocops.sh
tests/: conftest.py  test_doc_validator.py  test_doc_verifier.py  test_documentation.py  test_mcp_server.py
vault/: .cortex_index.json  architecture.md  auth.md  getting_started.md
(+552 files in other folders)
